# cppgow

./: CMakeLists.txt  Makefile  README.md  cppgow.go  cppgow_invoke.c  cppgowc.h  cppgowcxx.cc  cppgowcxx.hh  get.c  routegen.py  router.cc  router.hh  testrouter.cc  testserver.c  testserver.cc
include/cppgow/: cppgowc.h  cppgowcxx.hh  router.hh
samples/: get.c  testrouter.cc  testserver.c  testserver.cc
src/: cppgow.go  cppgow_invoke.c  cppgowcxx.cc  router.cc
